# ozon-search-queries-collector

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docconvert_config.json  main.py  main_browserleaks_spider.py  pyproject.toml  scrapy.cfg
.github/actions/linux/: action.yaml
.github/workflows/: ci_linux.yml
browser_scripts/: .eslintrc.js  Makefile  package.json
browser_scripts/scripts/: collect_search_queries.js  collect_search_queries_parallel.js  collect_search_queries_sequential.js
ozon_collector/: handler.py  handlers.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
ozon_collector/spiders/: BrowserleaksSpider.py  OzonDataQuerySpider.py
ozon_collector/spiders/j2_templates/: collect_search_queries_parallel.js.j2
ozon_collector/spiders/templates/: collect_search_queries.js.j2  collect_search_queries_sequential.js
